# dev-whatsapp-assistant

./: .env.example  .gitignore  README.md  fix_proactive.py  package-lock.json  package.json  patch_tools.py  patch_tools_definitions.py  pyproject.toml  session-ses_1e43.md  start.sh  update_tools.py
.kilo/plans/: 1777046424908-happy-otter.md  1777049221366-neon-river.md  1777050390456-curious-engine.md  1777051580567-silent-garden.md  1777106549994-kind-panda.md
app/: __init__.py  agent_graph.py  assistant.py  coach.py  config.py  database.py  main.py  media.py  migrate_gamification.py  onboarding.py  proactive.py  safety_interceptor.py  scheduler.py  tools.py
app/api/: __init__.py  bridge.py
app/delivery/: service.py
app/llm/: __init__.py  providers.py
app/tools/: __init__.py  base.py  definitions.py  images.py  metrics.py  reminders.py
skills/acl-rehab/: SKILL.md
src/: bridge-client.js  database.js  index-bridge.js  index.js  llm-provider.js  safety-interceptor.js  test-safety.js  tools.js  whatsapp-bot.js
tests/: __init__.py  test_coach_graph.py  test_database.py  test_delivery.py  test_safety.py  test_tools.py
